[package]
name = "keepawake"
version = "0.5.0"
authors = ["Segev Finer <segev208@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Keep your computer awake"
repository = "https://github.com/segevfiner/keepawake-rs/"
license = "MIT"
keywords = ["caffeinate", "systemd-inhibit", "idle", "sleep", "power-management"]
categories = ["command-line-utilities"]
exclude = ["/tools/"]

[features]
bin = [
    "dep:anyhow",
    "dep:clap",
    "dep:clap_complete",
    "dep:ctrlc",
    "dep:shadow-rs",
    "dep:sysinfo",
    "dep:winresource"
]

[profile.release]
strip = true
lto = "thin"

[[bin]]
name = "keepawake"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0.65", optional = true }
cfg-if = "1.0.0"
clap = { version = "4.0.2", features = ["derive"], optional = true }
clap_complete = { version = "4.0.2", optional = true }
ctrlc = { version = "3.2.3", features = ["termination"], optional = true }
derive_builder = "0.12.0"
shadow-rs = { version = "0.26.1", optional = true }
sysinfo = { version = "0.30.5", optional = true }
thiserror = "1.0.56"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_Power"
]

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-sys = { version = "0.2.0", features = ["CoreFoundation", "IOKit"] }
core-foundation = "0.9.3"

[build-dependencies]
shadow-rs = { version = "0.26.1", optional = true }
winresource = { version = "0.1.17", optional = true }
